--- a/stylesheets/BottomStyle.css
+++ b/stylesheets/BottomStyle.css
@@ -1,8 +1,9 @@
 #BottomWrap{
-    position: fixed;
-    bottom: 0;
-    left: 835px;
 }
 .bottom p{
+    position: fixed;
     color: white;
+    bottom: 0;
+    text-align: center;
+    width: 100%;
 }
